tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_array_element.c
struct s;

struct s arr[3];

struct s {
    int a;
    int b;
};

int main(void) {
    return 0;
}